--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <head>
     <title>Sir Sazwan Software Class</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -14,4 +15,5 @@
         </div>
 
 </body>
+
 </html>
